# linkedinwriter

./: README.md  pyproject-old.toml  pyproject.toml  report.md  report2.md
src/linkedinwriter/: crew.py  main.py
src/linkedinwriter/config/: agents.yaml
