[project]
name = "linkedinwriter"
version = "0.1.0"
description = "LinkedinWriter using crewAI"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.70.1,<1.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
]

[[project.authors]]
name = "Your Name"
email = "you@example.com"

[project.scripts]
linkedinwriter = "linkedinwriter.main:run"
run_crew = "linkedinwriter.main:run"
train = "linkedinwriter.main:train"
replay = "linkedinwriter.main:replay"
test = "linkedinwriter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
python = ">=3.10,<=3.13"


[tool.hatch.build.targets.wheel]
packages = ["src/linkedinwriter"]

[tool.uv.dependencies]
crewai = { version = ">=0.70.1,<1.0.0", extras = ["tools"] }
python-dotenv = ">=1.0.0"